쿠키 옵션 추가: secure, path, sameSite 등